assets/css/style.scss
---
---

@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans');

body {
    font: 16px/1.6 "Open+Sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    background-color: #fff;
    padding: 50px 0px 40px 0px;
    color: #727272;
    font-weight: 400;
}

.icon > svg {
    display: inline-block;
    width: 16px;
    height: 16px;
    vertical-align: middle;
    margin-right: .3em;
}

.email > svg {
    display: inline-block;
    height: 16px;
    width: 140px;
    vertical-align: middle;
    horiz-align: left;
}

div.slogan {
    padding: 20px 20px;
    background: #f8f8f8;
    margin-bottom: 20px;
}

div.slogan p cite {
    font-size: 2em;
}

a {
    color: #4a3a8b;
    text-decoration: none;
}

a:hover, a:focus {
    color: #5945a6;
    text-decoration: underline;
}

div.wrapper {
    max-width: 860px;
    margin: auto;
}

header {
    border-bottom: 1px solid #e5e5e5;
}

header h1 {
    display: inline;
    float: left;
    font-family: "Montserrat", "Open+Sans", sans-serif;
    font-size: 40px;
    margin: 0 0 12px;
}

header h1 a img {
    float: left;
}

header h1 a span {
    float: left;
    margin: 4px 8px 4px 8px;
}

header h1 a:hover, header h1 a:focus {
    text-decoration: none;
    font-weight: bold;
}

header a small {
    display: inline;
}

header nav.main-nav {
    float: right;
    margin-top: 32px;
    margin-bottom: -1px;
    margin-left: 8px;
    margin-right: 8px;
}

header nav.main-nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    border: none;
    background: none;
    text-align: center;
}

header nav.main-nav ul li {
    margin: 0 2px;
    border: 1px solid #ffffff;
    border-bottom: 1px solid #e5e5e5;
    display: inline-block;
}

header nav.main-nav ul li a {
    display: block;
    text-align: center;
    padding: 8px 12px 8px 12px;
    text-decoration: none;
}

header nav.main-nav ul li:not(.active) a:hover {
    background: #f7f7f7;
    border-top-right-radius: 6px;
    border-top-left-radius: 6px;
}

header nav.main-nav ul li.active a {
    color: black;
}

nav.main-nav ul .active {
    color: #4a3a8b;
    z-index: 2;
    border: 1px solid #e5e5e5;;
    border-bottom-color: #FFF;
    border-top-right-radius: 6px;
    border-top-left-radius: 6px;
}

section {
    padding: 20px;
    margin: 0 0 20px;
}

.btn {
    display: inline-block;
    margin-bottom: 0;
    font-weight: normal;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    background-image: none;
    border: 1px solid transparent;
    white-space: nowrap;
    padding: 6px 12px;
    font-size: 16px;
    line-height: 1.42857143;
    border-radius: 4px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.btn:focus,
.btn:active:focus,
.btn.active:focus,
.btn.focus,
.btn:active.focus,
.btn.active.focus {
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
    font-weight: normal;
}

.btn:hover,
.btn:focus,
.btn.focus {
    color: #333333;
    text-decoration: none;
    font-weight: normal;
}

.btn:active,
.btn.active {
    outline: 0;
    background-image: none;
    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}

.btn.disabled,
.btn[disabled],
fieldset[disabled] .btn {
    cursor: not-allowed;
    opacity: 0.65;
    filter: alpha(opacity=65);
    -webkit-box-shadow: none;
    box-shadow: none;
}

a.btn.disabled,
fieldset[disabled] a.btn {
    pointer-events: none;
}

.btn-default {
    color: #333333;
    background-color: #ffffff;
    border-color: #cccccc;
}

.btn-default:focus,
.btn-default.focus {
    color: #333333;
    background-color: #e6e6e6;
    border-color: #8c8c8c;
}

.btn-default:hover {
    color: #333333;
    background-color: #e6e6e6;
    border-color: #adadad;
}

.btn-default:active,
.btn-default.active,
.open > .dropdown-toggle.btn-default {
    color: #333333;
    background-color: #e6e6e6;
    border-color: #adadad;
}

.btn-default:active:hover,
.btn-default.active:hover,
.open > .dropdown-toggle.btn-default:hover,
.btn-default:active:focus,
.btn-default.active:focus,
.open > .dropdown-toggle.btn-default:focus,
.btn-default:active.focus,
.btn-default.active.focus,
.open > .dropdown-toggle.btn-default.focus {
    color: #333333;
    background-color: #d4d4d4;
    border-color: #8c8c8c;
}

.btn-default:active,
.btn-default.active,
.open > .dropdown-toggle.btn-default {
    background-image: none;
}

.btn-default.disabled:hover,
.btn-default[disabled]:hover,
fieldset[disabled] .btn-default:hover,
.btn-default.disabled:focus,
.btn-default[disabled]:focus,
fieldset[disabled] .btn-default:focus,
.btn-default.disabled.focus,
.btn-default[disabled].focus,
fieldset[disabled] .btn-default.focus {
    background-color: #ffffff;
    border-color: #cccccc;
}

.btn-default .badge {
    color: #ffffff;
    background-color: #333333;
}

.btn-primary {
    color: #ffffff;
    background-color: #5945a6;
    border-color: #4f3e94;
}

.btn-primary:focus,
.btn-primary.focus {
    color: #ffffff;
    background-color: #463682;
    border-color: #1f183a;
}

.btn-primary:hover {
    color: #ffffff;
    background-color: #463682;
    border-color: #382c69;
}

.btn-primary:active,
.btn-primary.active,
.open > .dropdown-toggle.btn-primary {
    color: #ffffff;
    background-color: #463682;
    border-color: #382c69;
}

.btn-primary:active:hover,
.btn-primary.active:hover,
.open > .dropdown-toggle.btn-primary:hover,
.btn-primary:active:focus,
.btn-primary.active:focus,
.open > .dropdown-toggle.btn-primary:focus,
.btn-primary:active.focus,
.btn-primary.active.focus,
.open > .dropdown-toggle.btn-primary.focus {
    color: #ffffff;
    background-color: #382c69;
    border-color: #1f183a;
}

.btn-primary:active,
.btn-primary.active,
.open > .dropdown-toggle.btn-primary {
    background-image: none;
}
/* ... */

